style: add fonts, change container width

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <div class="container">
     <header class="flex justify-between py-2 items-end h-16 mb-4">
         <a href="#" class="w-52 shrink-0">
-            <img src="/img/logo-svg.svg" alt="okursah">
+            <img src="../img/logo-svg.svg" alt="okursah">
         </a>
         <nav>
             <ul class="font-medium gap-x-6 hidden lg:flex items-center">
@@ -66,7 +66,7 @@
             </a>
         </div>
         <div class="flex-shrink-0 hidden lg:block">
-            <img src="/img/banner_o.webp" alt="Баннер">
+            <img src="../img/banner_o.webp" alt="Баннер">
         </div>
     </div>
 
