--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
             <img src="../img/logo-svg.svg" alt="okursah">
         </a>
         <nav>
-            <ul class="font-medium gap-x-6 hidden lg:flex items-center">
+            <ul class="font-medium hidden lg:flex items-center space-x-3">
                 <li class="flex justify-between items-center hover:opacity-75">
                     <a href="#"
-                       class="pt-1 pb-2 px-3 ring-1 ring-yellow-300 rounded-full flex justify-between items-center">
+                       class="py-1.5 px-3 ring-1 ring-yellow-300 rounded-full flex justify-between items-center">
                         Категории
-                        <svg class="w-4 h-4 ml-2 mt-1" xmlns="http://www.w3.org/2000/svg" fill="none"
+                        <svg class="w-6 h-6 pl-1" xmlns="http://www.w3.org/2000/svg" fill="none"
                              viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"/>
                         </svg>
@@ -51,17 +51,17 @@
         </nav>
     </header>
 
-    <div class="flex justify-center items-center p-12 rounded-md shadow-xl shadow-gray-200">
+    <div class="flex justify-center items-center p-12 rounded-md shadow-xl shadow-gray-200 mb-6">
         <div class="">
-            <h1 class="font-bold text-xl sm:text-4xl">Найди лучший онлайн курс для себя!</h1>
+            <h1 class="font-bold text-xl sm:text-4xl">Все курсы онлайн школ в одном месте</h1>
             <p class="py-6 text-xl">
                 Окурсах.ру - каталог образовательных онлайн- платформ и курсов. Сравните все обучающие онлайн-курсы,
                 выберите лучший для себя по цене, продолжительности и отзывам!
             </p>
             <p class="text-xl">
-                Всего <a href="#" class="text-blue-700 hover:text-blue-800">5555 курсов</a> в <a href="#" class="text-blue-700 hover:text-blue-800">128 школах</a>
+                Всего <a href="#">5555 курсов</a> в <a href="#" class="text-blue-700 hover:text-blue-800">128 школах</a>
             </p>
-            <a href="#" class="block bg-yellow-300 mt-6 py-3 w-60 text-center rounded hover:shadow-lg hover:shadow-gray-200 hover:bg-yellow-400 transition ease-in-out">
+            <a href="#" class="button button-default mt-4">
                 Подобрать курс
             </a>
         </div>
@@ -70,6 +70,219 @@
         </div>
     </div>
 
+    <h1 class="font-bold text-2xl my-3">Направления курсов</h1>
+
+    <div class="grid lg:grid-cols-3 md:grid-cols-2 gap-7">
+        <div class="bg-slate-50 p-6 space-y-6">
+            <div class="font-semibold text-lg">Бизнес и финансы</div>
+            <ul class="space-y-2">
+                <li>
+                    <a href="#">Event-менеджмент</a>
+                </li>
+                <li>
+                    <a href="#">Excel и Google таблицы</a>
+                </li>
+                <li>
+                    <a href="#">HR и управление персоналом</a>
+                </li>
+                <li>
+                    <a href="#">Product manager</a>
+                </li>
+                <li>
+                    <a href="#">Project manager</a>
+                </li>
+            </ul>
+
+            <div class="text-center text-lg font-medium">
+                <a href="#" class="ring-2 rounded-full ring-yellow-300 p-1.5 hover:bg-yellow-300 flex items-center justify-center">
+                    Все курсы
+                    <svg class="w-6 h-6 pl-1 pt-0.5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path>
+                    </svg>
+                </a>
+            </div>
+        </div>
+
+        <div class="bg-slate-50 p-6 space-y-6">
+            <div class="font-semibold text-lg">Бизнес и финансы</div>
+            <ul class="space-y-2">
+                <li>
+                    <a href="#">Event-менеджмент</a>
+                </li>
+                <li>
+                    <a href="#">Excel и Google таблицы</a>
+                </li>
+                <li>
+                    <a href="#">HR и управление персоналом</a>
+                </li>
+                <li>
+                    <a href="#">Product manager</a>
+                </li>
+                <li>
+                    <a href="#">Project manager</a>
+                </li>
+            </ul>
+
+            <div class="text-center text-lg font-medium">
+                <a href="#" class="ring-2 rounded-full ring-yellow-300 p-1.5 hover:bg-yellow-300 flex items-center justify-center">
+                    Все курсы
+                    <svg class="w-6 h-6 pl-1 pt-0.5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path>
+                    </svg>
+                </a>
+            </div>
+        </div>
+
+        <div class="bg-slate-50 p-6 space-y-6">
+            <div class="font-semibold text-lg">Бизнес и финансы</div>
+            <ul class="space-y-2">
+                <li>
+                    <a href="#">Event-менеджмент</a>
+                </li>
+                <li>
+                    <a href="#">Excel и Google таблицы</a>
+                </li>
+                <li>
+                    <a href="#">HR и управление персоналом</a>
+                </li>
+                <li>
+                    <a href="#">Product manager</a>
+                </li>
+                <li>
+                    <a href="#">Project manager</a>
+                </li>
+            </ul>
+
+            <div class="text-center text-lg font-medium">
+                <a href="#" class="ring-2 rounded-full ring-yellow-300 p-1.5 hover:bg-yellow-300 flex items-center justify-center">
+                    Все курсы
+                    <svg class="w-6 h-6 pl-1 pt-0.5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path>
+                    </svg>
+                </a>
+            </div>
+        </div>
+
+        <div class="bg-slate-50 p-6 space-y-6">
+            <div class="font-semibold text-lg">Бизнес и финансы</div>
+            <ul class="space-y-2">
+                <li>
+                    <a href="#">Event-менеджмент</a>
+                </li>
+                <li>
+                    <a href="#">Excel и Google таблицы</a>
+                </li>
+                <li>
+                    <a href="#">HR и управление персоналом</a>
+                </li>
+                <li>
+                    <a href="#">Product manager</a>
+                </li>
+                <li>
+                    <a href="#">Project manager</a>
+                </li>
+            </ul>
+
+            <div class="text-center text-lg font-medium">
+                <a href="#" class="ring-2 rounded-full ring-yellow-300 p-1.5 hover:bg-yellow-300 flex items-center justify-center">
+                    Все курсы
+                    <svg class="w-6 h-6 pl-1 pt-0.5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path>
+                    </svg>
+                </a>
+            </div>
+        </div>
+
+        <div class="bg-slate-50 p-6 space-y-6">
+            <div class="font-semibold text-lg">Бизнес и финансы</div>
+            <ul class="space-y-2">
+                <li>
+                    <a href="#">Event-менеджмент</a>
+                </li>
+                <li>
+                    <a href="#">Excel и Google таблицы</a>
+                </li>
+                <li>
+                    <a href="#">HR и управление персоналом</a>
+                </li>
+                <li>
+                    <a href="#">Product manager</a>
+                </li>
+                <li>
+                    <a href="#">Project manager</a>
+                </li>
+            </ul>
+
+            <div class="text-center text-lg font-medium">
+                <a href="#" class="ring-2 rounded-full ring-yellow-300 p-1.5 hover:bg-yellow-300 flex items-center justify-center">
+                    Все курсы
+                    <svg class="w-6 h-6 pl-1 pt-0.5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path>
+                    </svg>
+                </a>
+            </div>
+        </div>
+
+        <div class="bg-slate-50 p-6 space-y-6">
+            <div class="font-semibold text-lg">Бизнес и финансы</div>
+            <ul class="space-y-2">
+                <li>
+                    <a href="#">Event-менеджмент</a>
+                </li>
+                <li>
+                    <a href="#">Excel и Google таблицы</a>
+                </li>
+                <li>
+                    <a href="#">HR и управление персоналом</a>
+                </li>
+                <li>
+                    <a href="#">Product manager</a>
+                </li>
+                <li>
+                    <a href="#">Project manager</a>
+                </li>
+            </ul>
+
+            <div class="text-center text-lg font-medium">
+                <a href="#" class="ring-2 rounded-full ring-yellow-300 p-1.5 hover:bg-yellow-300 flex items-center justify-center">
+                    Все курсы
+                    <svg class="w-6 h-6 pl-1 pt-0.5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path>
+                    </svg>
+                </a>
+            </div>
+        </div>
+
+        <div class="bg-slate-50 p-6 space-y-6">
+            <div class="font-semibold text-lg">Бизнес и финансы</div>
+            <ul class="space-y-2">
+                <li>
+                    <a href="#">Event-менеджмент</a>
+                </li>
+                <li>
+                    <a href="#">Excel и Google таблицы</a>
+                </li>
+                <li>
+                    <a href="#">HR и управление персоналом</a>
+                </li>
+                <li>
+                    <a href="#">Product manager</a>
+                </li>
+                <li>
+                    <a href="#">Project manager</a>
+                </li>
+            </ul>
+
+            <div class="text-center text-lg font-medium">
+                <a href="#" class="ring-2 rounded-full ring-yellow-300 p-1.5 hover:bg-yellow-300 flex items-center justify-center">
+                    Все курсы
+                    <svg class="w-6 h-6 pl-1 pt-0.5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path>
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 
 
