style: directions hover changes

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
     <h1 class="font-bold text-2xl my-3">Направления курсов</h1>
 
     <div class="grid lg:grid-cols-3 md:grid-cols-2 gap-7">
-        <div class="bg-slate-50 p-6 space-y-6">
+        <div class="bg-slate-50 p-6 space-y-6 animate__animated  animate__flash animate__bounceOut">
             <div class="font-semibold text-lg">Бизнес и финансы</div>
             <ul class="space-y-2">
                 <li>
@@ -283,6 +283,8 @@
             </div>
         </div>
     </div>
+
+
 </div>
 
 
