style: add custom footer

--- a/public/index.html
+++ b/public/index.html
@@ -1033,5 +1033,135 @@
 </div>
 
 
+<footer class="text-gray-400 bg-gray-900 body-font mt-12">
+    <div class="container px-5 pt-14 pb-4 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
+        <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
+            <a class="flex title-font font-medium items-center justify-center text-white">
+                <img src="https://okursah.ru/img/logos/logo-o.png" alt="okursah.ru" width="200" height="40">
+            </a>
+            <div class="flex flex-col justify-center mt-4">
+                <div class="text-white text-center space-y-1 text-sm">
+                    <span class="block">Оцените наш сайт</span>
+                    <div class="flex justify-center">
+                        <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
+                        <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
+                        <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
+                        <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
+                        <svg aria-hidden="true" class="w-5 h-5 text-gray-300 dark:text-gray-500" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
+                    </div>
+                    <span class="block">4.7 (339 голосов)</span>
+                </div>
+            </div>
+        </div>
+        <div class="flex-grow flex flex-wrap md:pl-12 -mb-10 md:mt-0 mt-10 md:text-left text-center">
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                <h2 class="title-font font-medium text-white tracking-widest text-sm mb-3">Категории</h2>
+                <nav class="list-none mb-10">
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Бизнес и финансы</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Маркетинг</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Программирование</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Дизайн</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Аналитика</a>
+                    </li>
+                </nav>
+            </div>
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                <nav class="list-none mb-10">
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Видео, фото, аудио</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Иностранный язык</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Для детей</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Красота и косметология</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Саморазвитие</a>
+                    </li>
+                </nav>
+            </div>
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                <h2 class="title-font font-medium text-white tracking-widest text-sm mb-3">Дополнительно</h2>
+                <nav class="list-none mb-10">
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Бесплатные</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-400 hover:text-white">С трудоустройством</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Акции школ</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Блог</a>
+                    </li>
+                </nav>
+            </div>
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+                <h2 class="title-font font-medium text-white tracking-widest text-sm mb-3">Информация</h2>
+                <nav class="list-none mb-10">
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Контакты</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Партнерам</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Вакансии</a>
+                    </li>
+                    <li>
+                        <a class="text-gray-400 hover:text-white">Карта сайта</a>
+                    </li>
+                </nav>
+            </div>
+        </div>
+    </div>
+    <div class="container px-5 py-4">
+        <p class="text-sm text-center">
+            Сайт использует файлы cookie для повышения удобства пользователей и улучшения работы сайта.
+        </p>
+    </div>
+    <div class="border-t border-gray-800">
+        <div class="container px-5 py-8 flex flex-wrap mx-auto items-center">
+            <div class="flex md:flex-nowrap flex-wrap justify-center items-end md:justify-start">
+                <div class="relative sm:mr-4 mr-2">
+                    <input type="text" id="footer-field" placeholder="Найти курс" name="footer-field" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:ring-2 focus:ring-yellow-900 focus:bg-transparent focus:border-yellow-500 text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                </div>
+                <button class="button button-default">Поиск</button>
+                <p class="text-gray-500 text-sm md:ml-6 md:mt-0 mt-2 text-center sm:text-left">
+                    Окурсах.ру - каталог образовательных курсов, обучение востребованным профессиям с нуля! Не занимаемся образовательной деятельностью, содержание сайта носит исключительно информационно-справочный характер, не является офертой.
+                </p>
+            </div>
+            <span class="inline-flex lg:ml-auto lg:mt-0 mt-6 w-full justify-center md:justify-start md:w-auto"></span>
+        </div>
+    </div>
+    <div class="bg-gray-800 bg-opacity-75">
+        <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+            <p class="text-gray-400 text-sm text-center sm:text-left">© 2022 Okursah.ru — При использовании материалов гиперссылка на okursah.ru обязательна.
+            </p>
+            <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+        <a class="text-gray-400">
+
+        </a>
+
+      </span>
+        </div>
+    </div>
+</footer>
+
+
 </body>
 </html>
