style: add blog

--- a/public/index.html
+++ b/public/index.html
@@ -1030,6 +1030,231 @@
         </div>
     </section>
 
+
+    <section>
+        <div class="bg-white py-6 sm:py-8 lg:py-12">
+            <div class="max-w-screen-2xl px-4 md:px-8 mx-auto">
+                <!-- text - start -->
+                <div class="mb-10 md:mb-16">
+                    <h2 class="text-gray-800 text-2xl lg:text-3xl font-bold text-center mb-4 md:mb-6">Blog #1</h2>
+                </div>
+                <!-- text - end -->
+
+                <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 md:gap-6 xl:gap-8">
+                    <!-- article - start -->
+                    <a href="#" class="group h-48 md:h-64 xl:h-96 flex flex-col bg-gray-100 rounded-lg shadow-lg overflow-hidden relative">
+                        <img src="https://okursah.ru/storage/posts/previews/pn0C2FBzrCBruAzvT55Hy5Rtc5UUFDklhLgQ2LXR.webp" loading="lazy" alt="Photo by Minh Pham" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
+
+                        <div class="bg-gradient-to-t from-gray-800 md:via-transparent to-transparent absolute inset-0 pointer-events-none"></div>
+
+                        <div class="relative p-4 mt-auto">
+                            <span class="block text-gray-200 text-sm">26 декабря 2022</span>
+                            <h2 class="text-white text-xl font-semibold transition duration-100 mb-2">Как научиться рисовать: ТОП-10 бесплатных видео-уроков онлайн</h2>
+
+                            <span class="text-indigo-300 font-semibold">Подробнее</span>
+                        </div>
+                    </a>
+                    <!-- article - end -->
+
+                    <!-- article - start -->
+                    <a href="#" class="group h-48 md:h-64 xl:h-96 flex flex-col bg-gray-100 rounded-lg shadow-lg overflow-hidden relative">
+                        <img src="https://okursah.ru/storage/posts/previews/SVXbPeqh0Q0NKeN55zRojBKtVNrQ4AFX8IEeo6M9.webp" loading="lazy" alt="Photo by Lorenzo Herrera" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
+
+                        <div class="bg-gradient-to-t from-gray-800 md:via-transparent to-transparent absolute inset-0 pointer-events-none"></div>
+
+                        <div class="relative p-4 mt-auto">
+                            <span class="block text-gray-200 text-sm">23 декабря 2022</span>
+                            <h2 class="text-white text-xl font-semibold transition duration-100 mb-2">Учимся программировать на онлайн-курсах Geekbrains и Skillbox</h2>
+
+                            <span class="text-indigo-300 font-semibold">Подробнее</span>
+                        </div>
+                    </a>
+                    <!-- article - end -->
+
+                    <!-- article - start -->
+                    <a href="#" class="group h-48 md:h-64 xl:h-96 flex flex-col bg-gray-100 rounded-lg shadow-lg overflow-hidden relative">
+                        <img src="https://okursah.ru/storage/posts/previews/uIdzekPSg1y2lz5qlVqCAncsE0m1rijZ3lz2cz57.webp" loading="lazy" alt="Photo by Magicle" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
+
+                        <div class="bg-gradient-to-t from-gray-800 md:via-transparent to-transparent absolute inset-0 pointer-events-none"></div>
+
+                        <div class="relative p-4 mt-auto">
+                            <span class="block text-gray-200 text-sm">21 декабря 2022</span>
+                            <h2 class="text-white text-xl font-semibold transition duration-100 mb-2">Преимущества DevOps-подхода к разработке</h2>
+
+                            <span class="text-indigo-300 font-semibold">Подробнее</span>
+                        </div>
+                    </a>
+                    <!-- article - end -->
+
+                    <!-- article - start -->
+                    <a href="#" class="group h-48 md:h-64 xl:h-96 flex flex-col bg-gray-100 rounded-lg shadow-lg overflow-hidden relative">
+                        <img src="https://okursah.ru/storage/posts/previews/k7tH4jlTkS9WDbVVayIZpyFBsfAG3RVNHSx0CDXz.webp" loading="lazy" alt="Photo by Martin Sanchez" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
+
+                        <div class="bg-gradient-to-t from-gray-800 md:via-transparent to-transparent absolute inset-0 pointer-events-none"></div>
+
+                        <div class="relative p-4 mt-auto">
+                            <span class="block text-gray-200 text-sm">15 декабря 2022</span>
+                            <h2 class="text-white text-xl font-semibold transition duration-100 mb-2">Excel для анализа данных</h2>
+
+                            <span class="text-indigo-300 font-semibold">Подробнее</span>
+                        </div>
+                    </a>
+                    <!-- article - end -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section>
+        <div class="bg-white py-6 sm:py-8 lg:py-12">
+            <div class="max-w-screen-2xl px-4 md:px-8 mx-auto">
+                <!-- text - start -->
+                <div class="mb-10 md:mb-16">
+                    <h2 class="text-gray-800 text-2xl lg:text-3xl font-bold text-center mb-4 md:mb-6">Blog #2</h2>
+
+                </div>
+                <!-- text - end -->
+
+                <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6 xl:gap-8">
+                    <!-- article - start -->
+                    <div class="flex flex-col bg-white border rounded-lg overflow-hidden">
+                        <a href="#" class="group h-48 md:h-64 block bg-gray-100 overflow-hidden relative">
+                            <img src="https://okursah.ru/storage/posts/previews/pn0C2FBzrCBruAzvT55Hy5Rtc5UUFDklhLgQ2LXR.webp" loading="lazy" alt="Photo by Minh Pham" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
+                        </a>
+
+                        <div class="flex flex-col flex-1 p-4 sm:p-6">
+                            <h2 class="text-gray-800 text-lg font-semibold mb-2">
+                                <a href="#" class="hover:text-indigo-500 active:text-indigo-600 transition duration-100">Как научиться рисовать: ТОП-10 бесплатных видео-уроков онлайн</a>
+                            </h2>
+
+                            <p class="text-gray-500 mb-8">Посмотрите на мир другими глазами с помощью рисования. Это отличное хобби для снятия стресса и всестороннего изучения вещей. Благодаря концентрации на линиях от кисти или карандаша, вы улучшите память и...</p>
+
+                            <div class="flex justify-between items-center mt-auto">
+                                <div class="flex items-center gap-2">
+                                    <div class="w-10 h-10 shrink-0 bg-gray-100 rounded-full overflow-hidden">
+                                        <img src="https://okursah.ru/img/placeholders/avatar.png" loading="lazy" alt="Photo by Brock Wegner" class="w-full h-full object-cover object-center" />
+                                    </div>
+
+                                    <div>
+                                        <span class="block text-indigo-500">Редакция Окурсах.ру</span>
+                                        <span class="block text-gray-400 text-sm">26 декабря 2022</span>
+                                    </div>
+                                </div>
+                                <div class="flex items-center text-gray-400">
+                                    <svg class="w-5 h-5 mr-2" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
+                                    2.1k
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- article - end -->
+
+                    <!-- article - start -->
+                    <div class="flex flex-col bg-white border rounded-lg overflow-hidden">
+                        <a href="#" class="group h-48 md:h-64 block bg-gray-100 overflow-hidden relative">
+                            <img src="https://okursah.ru/storage/posts/previews/SVXbPeqh0Q0NKeN55zRojBKtVNrQ4AFX8IEeo6M9.webp" loading="lazy" alt="Photo by Lorenzo Herrera" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
+                        </a>
+
+                        <div class="flex flex-col flex-1 p-4 sm:p-6">
+                            <h2 class="text-gray-800 text-lg font-semibold mb-2">
+                                <a href="#" class="hover:text-indigo-500 active:text-indigo-600 transition duration-100">Учимся программировать на онлайн-курсах Geekbrains и Skillbox</a>
+                            </h2>
+
+                            <p class="text-gray-500 mb-8">Обучение программированию одно из самых востребованных направлений в онлайн-образовании. Современные онлайн-школы постоянно совершенствуют курсы по программированию, запускают тренажёры для кодинга и предлагают стажировки.  У Geekbrains и Skillbox много курсов по...</p>
+
+                            <div class="flex justify-between items-center mt-auto">
+                                <div class="flex items-center gap-2">
+                                    <div class="w-10 h-10 shrink-0 bg-gray-100 rounded-full overflow-hidden">
+                                        <img src="https://okursah.ru/img/placeholders/avatar.png" loading="lazy" alt="Photo by peter bucks" class="w-full h-full object-cover object-center" />
+                                    </div>
+
+                                    <div>
+                                        <span class="block text-indigo-500">Редакция Окурсах.ру</span>
+                                        <span class="block text-gray-400 text-sm">23 декабря 2022</span>
+                                    </div>
+                                </div>
+
+                                <div class="flex items-center text-gray-400">
+                                    <svg class="w-5 h-5 mr-2" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
+                                    2.1k
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- article - end -->
+
+                    <!-- article - start -->
+                    <div class="flex flex-col bg-white border rounded-lg overflow-hidden">
+                        <a href="#" class="group h-48 md:h-64 block bg-gray-100 overflow-hidden relative">
+                            <img src=" https://okursah.ru/storage/posts/previews/uIdzekPSg1y2lz5qlVqCAncsE0m1rijZ3lz2cz57.webp" loading="lazy" alt="Photo by Magicle" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
+                        </a>
+
+                        <div class="flex flex-col flex-1 p-4 sm:p-6">
+                            <h2 class="text-gray-800 text-lg font-semibold mb-2">
+                                <a href="#" class="hover:text-indigo-500 active:text-indigo-600 transition duration-100">Преимущества DevOps-подхода к разработке</a>
+                            </h2>
+
+                            <p class="text-gray-500 mb-8">DevOps-подход позволяет наладить взаимодействие между программистами, тестировщиками и сисадминами в совместной разработке IT-продуктов.  В основе методологии лежит идея цикличности процессов разработки, тестирования и эксплуатации цифровых продуктов. При классическом подходе к...</p>
+
+                            <div class="flex justify-between items-center mt-auto">
+                                <div class="flex items-center gap-2">
+                                    <div class="w-10 h-10 shrink-0 bg-gray-100 rounded-full overflow-hidden">
+                                        <img src="https://okursah.ru/img/placeholders/avatar.png" loading="lazy" alt="Photo by Jassir Jonis" class="w-full h-full object-cover object-center" />
+                                    </div>
+
+                                    <div>
+                                        <span class="block text-indigo-500">Редакция Окурсах.ру</span>
+                                        <span class="block text-gray-400 text-sm">21 декабря 2022</span>
+                                    </div>
+                                </div>
+
+                                <div class="flex items-center text-gray-400">
+                                    <svg class="w-5 h-5 mr-2" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
+                                    2.1k
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- article - end -->
+
+                    <!-- article - start -->
+                    <div class="flex flex-col bg-white border rounded-lg overflow-hidden">
+                        <a href="#" class="group h-48 md:h-64 block bg-gray-100 overflow-hidden relative">
+                            <img src="https://okursah.ru/storage/posts/previews/k7tH4jlTkS9WDbVVayIZpyFBsfAG3RVNHSx0CDXz.webp" loading="lazy" alt="Photo by Martin Sanchez" class="w-full h-full object-cover object-center absolute inset-0 group-hover:scale-110 transition duration-200" />
+                        </a>
+
+                        <div class="flex flex-col flex-1 p-4 sm:p-6">
+                            <h2 class="text-gray-800 text-lg font-semibold mb-2">
+                                <a href="#" class="hover:text-indigo-500 active:text-indigo-600 transition duration-100">Excel для анализа данных</a>
+                            </h2>
+
+                            <p class="text-gray-500 mb-8">Посмотрите на мир другими глазами с помощью рисования. Это отличное хобби для снятия стресса и всестороннего изучения вещей. Благодаря концентрации на линиях от кисти или карандаша, вы улучшите память и...</p>
+
+                            <div class="flex justify-between items-center mt-auto">
+                                <div class="flex items-center gap-2">
+                                    <div class="w-10 h-10 shrink-0 bg-gray-100 rounded-full overflow-hidden">
+                                        <img src="https://okursah.ru/img/placeholders/avatar.png" loading="lazy" alt="Photo by Aiony Haust" class="w-full h-full object-cover object-center" />
+                                    </div>
+
+                                    <div>
+                                        <span class="block text-indigo-500">Редакция Окурсах.ру</span>
+                                        <span class="block text-gray-400 text-sm">15 декабря 2022</span>
+                                    </div>
+                                </div>
+
+                                <div class="flex items-center text-gray-400">
+                                    <svg class="w-5 h-5 mr-2" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
+                                    2.1k
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- article - end -->
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
 
 
