--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container">
     <!-- Header -->
-    <header class="fixed inset-0 px-4 bg-white w-full flex justify-between py-2 items-end h-16 mb-4 sm:static sm:px-0" x-data @keyup.esc="$store.menu.hideAll()">
+    <header class="fixed inset-0 px-4 bg-white w-full flex justify-between py-2 items-end h-16 mb-4 z-10 sm:static sm:px-0" x-data @keyup.esc="$store.menu.hideAll()">
         <a href="#" class="w-52 shrink-0">
             <img src="../img/logo-svg.svg" alt="okursah">
         </a>
@@ -789,7 +789,7 @@
         </div>
     </header>
 
-    <nav class="inset-0 top-16 overflow-y-scroll bg-slate-50 fixed sm:hidden" x-data x-transition x-show="$store.menu.status('category', 'mobile')">
+    <nav class="inset-0 top-16 overflow-y-scroll bg-slate-50 fixed z-10 sm:hidden" x-data x-transition x-cloak x-show="$store.menu.status('category', 'mobile')">
         <ul class="p-4 flex flex-wrap gap-2">
             <li>
                 <a href="#" class="py-1.5 px-3 border border-2 border-black font-bold block bg-white rounded-full">Бизнес и финансы</a>
@@ -2918,9 +2918,6 @@
     </section>
 
 
-    <!-- todo отзывы
-        - сделать левый сайдбар
-    -->
     <h2 class="text-gray-800 text-2xl lg:text-3xl font-bold text-center mb-4 md:mb-6">Отзывы</h2>
     <!--  reviews  -->
     <section>
@@ -3018,9 +3015,113 @@
         </div>
 
         <!-- Reviews list -->
-        <div class="flex flex-col-reverse mt-8 gap-6 md:flex-row">
-            <div class="basis-80 h-36 shadow-lg rounded top-5 md:sticky">
+        <div class="flex flex-col-reverse mt-8 gap-6 md:flex-row md:items-start">
+            <div class="basis-1/3 shadow-lg rounded top-5 p-4 space-y-2 md:sticky">
+                <div class="text-center m-auto max-h-24 overflow-hidden grid place-content-center">
+                    <img src="https://okursah.ru/img/logos/school/skypro.png" class="m-auto" alt="school logo" />
+                </div>
+                <div class="text-center">
+                    <div class="flex justify-center">
+                        <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
+                        <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
+                        <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
+                        <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
+                        <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
+                    </div>
+                    <a href="#">
+                        49 отзывов
+                    </a>
+                </div>
+                <div class="grid grid-rows-2 grid-cols-8 gap-x-2">
+                    <div class="grid-cols-1 row-span-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 21v-8.25M15.75 21v-8.25M8.25 21v-8.25M3 9l9-6 9 6m-1.5 12V10.332A48.36 48.36 0 0012 9.75c-2.551 0-5.056.2-7.5.582V21M3 21h18M12 6.75h.008v.008H12V6.75z" />
+                        </svg>
 
+                    </div>
+                    <div class="col-span-7 row-span-1 text-sm">
+                        ООО «Нетология»
+                    </div>
+                    <div class="col-span-7 row-span-1 text-xs text-slate-400">
+                        наименование школы
+                    </div>
+                </div>
+                <div class="grid grid-rows-2 grid-cols-8 gap-x-2">
+                    <div class="grid-cols-1 row-span-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15 9h3.75M15 12h3.75M15 15h3.75M4.5 19.5h15a2.25 2.25 0 002.25-2.25V6.75A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25v10.5A2.25 2.25 0 004.5 19.5zm6-10.125a1.875 1.875 0 11-3.75 0 1.875 1.875 0 013.75 0zm1.294 6.336a6.721 6.721 0 01-3.17.789 6.721 6.721 0 01-3.168-.789 3.376 3.376 0 016.338 0z" />
+                        </svg>
+                    </div>
+                    <div class="col-span-7 row-span-1 text-sm">
+                        1207700135884
+                    </div>
+                    <div class="col-span-7 row-span-1 text-xs text-slate-400">
+                        ОГРН
+                    </div>
+                </div>
+                <div class="grid grid-rows-2 grid-cols-8 gap-x-2">
+                    <div class="grid-cols-1 row-span-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M10.125 2.25h-4.5c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125v-9M10.125 2.25h.375a9 9 0 019 9v.375M10.125 2.25A3.375 3.375 0 0113.5 5.625v1.5c0 .621.504 1.125 1.125 1.125h1.5a3.375 3.375 0 013.375 3.375M9 15l2.25 2.25L15 12" />
+                        </svg>
+                    </div>
+                    <div class="col-span-7 row-span-1 text-sm">
+                        №039911 от15.02.2019г.
+                    </div>
+                    <div class="col-span-7 row-span-1 text-xs text-slate-400">
+                        Лицензия
+                    </div>
+                </div>
+                <div class="grid grid-rows-2 grid-cols-8 gap-x-2">
+                    <div class="grid-cols-1 row-span-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z" />
+                        </svg>
+
+                    </div>
+                    <div class="col-span-7 row-span-2 text-sm">
+                        Москва, Ленинский проспект, дом 6, строение 20
+                    </div>
+                </div>
+                <div class="grid grid-rows-2 grid-cols-8 gap-x-2">
+                    <div class="grid-cols-1 row-span-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M4.26 10.147a60.436 60.436 0 00-.491 6.347A48.627 48.627 0 0112 20.904a48.627 48.627 0 018.232-4.41 60.46 60.46 0 00-.491-6.347m-15.482 0a50.57 50.57 0 00-2.658-.813A59.905 59.905 0 0112 3.493a59.902 59.902 0 0110.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.697 50.697 0 0112 13.489a50.702 50.702 0 017.74-3.342M6.75 15a.75.75 0 100-1.5.75.75 0 000 1.5zm0 0v-3.675A55.378 55.378 0 0112 8.443m-7.007 11.55A5.981 5.981 0 006.75 15.75v-1.5" />
+                        </svg>
+                    </div>
+                    <a href="#" class="col-span-7 row-span-1 text-sm">
+                        493 курса онлайн
+                    </a>
+                    <a href="#" class="col-span-7 row-span-1 text-sm">
+                        10 бесплатных
+                    </a>
+                </div>
+                <div class="grid grid-rows-2 grid-cols-8 gap-x-2 items-center">
+                    <div class="grid-cols-1 row-span-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 01-1.043 3.296 3.745 3.745 0 01-3.296 1.043A3.745 3.745 0 0112 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 01-3.296-1.043 3.745 3.745 0 01-1.043-3.296A3.745 3.745 0 013 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 011.043-3.296 3.746 3.746 0 013.296-1.043A3.746 3.746 0 0112 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 013.296 1.043 3.746 3.746 0 011.043 3.296A3.745 3.745 0 0121 12z" />
+                        </svg>
+                    </div>
+                    <div class="col-span-7 row-span-2 text-sm">
+                        Выдают сертификат
+                    </div>
+                </div>
+                <div class="grid grid-rows-2 grid-cols-8 gap-x-2 items-center pb-2">
+                    <div class="grid-cols-1 row-span-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M21 11.25v8.25a1.5 1.5 0 01-1.5 1.5H5.25a1.5 1.5 0 01-1.5-1.5v-8.25M12 4.875A2.625 2.625 0 109.375 7.5H12m0-2.625V7.5m0-2.625A2.625 2.625 0 1114.625 7.5H12m0 0V21m-8.625-9.75h18c.621 0 1.125-.504 1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125h-18c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125z" />
+                        </svg>
+                    </div>
+                    <a href="#" class="col-span-7 row-span-2 text-sm">
+                        Есть промокод
+                    </a>
+                </div>
+
+                <div class="space-y-2">
+                    <a href="#" class="button button-default block">Перейти на сайт</a>
+                    <a href="#" class="button button-secondary block">Добавить отзыв</a>
+                </div>
             </div>
             <div class="w-full space-y-6 relative">
                 <div class="p-6 rounded-xl shadow-md space-y-4" x-data="{ open: false }">
@@ -3781,6 +3882,113 @@
                     <button type="button" class="relative bg-yellow-300 hover:bg-yellow-400 focus:outline-none focus:ring-2 focus:ring-slate-400 focus:ring-offset-2 text-sm font-semibold h-12 px-6 rounded-lg flex items-center dark:bg-slate-700 dark:hover:bg-slate-600 pointer-events-auto">
                         Показать больше
                     </button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--  ToDo content  -->
+    <h2 class="text-gray-800 text-2xl lg:text-3xl font-bold text-center mb-4 md:mb-6">Планируемые задачи</h2>
+    <section>
+        <div class="bg-white py-6 sm:py-8 lg:py-12">
+            <div class="max-w-screen-2xl px-4 md:px-8 mx-auto">
+
+                <div class="grid sm:grid-cols-2 xl:grid-cols-3 gap-4 md:gap-8">
+                    <!-- feature - start -->
+                    <div class="flex bg-gray-50 border rounded-lg divide-x">
+                        <div class="flex items-center text-indigo-500 p-2 md:p-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 md:w-8 h-6 md:h-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                            </svg>
+                        </div>
+
+                        <div class="p-4 md:p-6">
+                            <h3 class="text-lg md:text-xl font-semibold mb-2">Блок сайдбар для школы</h3>
+                            <p class="text-gray-500">
+                                Подобрать дизайн для сайдбара школы (секция выше)
+                            </p>
+                        </div>
+                    </div>
+                    <!-- feature - end -->
+
+                    <!-- feature - start -->
+                    <div class="flex bg-gray-50 border rounded-lg divide-x">
+                        <div class="flex items-center text-indigo-500 p-2 md:p-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 md:w-8 h-6 md:h-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                            </svg>
+                        </div>
+
+                        <div class="p-4 md:p-6">
+                            <h3 class="text-lg md:text-xl font-semibold mb-2">Доп UI</h3>
+                            <p class="text-gray-500">
+                                Облако тегов, новые ХК (с микроразметкой), всплывающее окно, блок-фильтр курсов, FAQ, блок с лучшими школами, форма просмотров для блога, инфо об авторе в блоге, уведомление telegram, сортировка отзывов
+                            </p>
+                        </div>
+                    </div>
+                    <!-- feature - end -->
+
+                    <!-- feature - start -->
+                    <div class="flex bg-gray-50 border rounded-lg divide-x">
+                        <div class="flex items-center text-indigo-500 p-2 md:p-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 md:w-8 h-6 md:h-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                            </svg>
+                        </div>
+
+                        <div class="p-4 md:p-6">
+                            <h3 class="text-lg md:text-xl font-semibold mb-2">Группировка курсов</h3>
+                            <p class="text-gray-500">Новый блок группировки курсов</p>
+                        </div>
+                    </div>
+                    <!-- feature - end -->
+
+                    <!-- feature - start -->
+                    <div class="flex bg-gray-50 border rounded-lg divide-x">
+                        <div class="flex items-center text-indigo-500 p-2 md:p-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 md:w-8 h-6 md:h-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                            </svg>
+                        </div>
+
+                        <div class="p-4 md:p-6">
+                            <h3 class="text-lg md:text-xl font-semibold mb-2">Сетка промокодов</h3>
+                            <p class="text-gray-500">Новая современная сетка для промокодов</p>
+                        </div>
+                    </div>
+                    <!-- feature - end -->
+
+                    <!-- feature - start -->
+                    <div class="flex bg-gray-50 border rounded-lg divide-x">
+                        <div class="flex items-center text-indigo-500 p-2 md:p-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 md:w-8 h-6 md:h-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                            </svg>
+                        </div>
+
+                        <div class="p-4 md:p-6">
+                            <h3 class="text-lg md:text-xl font-semibold mb-2">Формы</h3>
+                            <p class="text-gray-500">
+                                Форма обратной связи, форма подбора курсов, форма для партнеров, форма комментариев под блог
+                            </p>
+                        </div>
+                    </div>
+                    <!-- feature - end -->
+
+                    <!-- feature - start -->
+                    <div class="flex bg-gray-50 border rounded-lg divide-x">
+                        <div class="flex items-center text-indigo-500 p-2 md:p-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 md:w-8 h-6 md:h-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                            </svg>
+                        </div>
+
+                        <div class="p-4 md:p-6">
+                            <h3 class="text-lg md:text-xl font-semibold mb-2">Блог</h3>
+                            <p class="text-gray-500">Подготовленная статья для блога, UI шорткод элементы, typography настройки, оформление</p>
+                        </div>
+                    </div>
+                    <!-- feature - end -->
                 </div>
             </div>
         </div>
